{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 28,
  "lineage": "960f7e56-6712-d566-0f81-ad8caab2c68d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400217687748:internet-gateway/igw-037150bf9a185a784",
            "id": "igw-037150bf9a185a784",
            "owner_id": "400217687748",
            "region": "us-east-1",
            "tags": {
              "Name": "shopez-igw"
            },
            "tags_all": {
              "Name": "shopez-igw"
            },
            "vpc_id": "vpc-08fcf16f9083be918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "igw-037150bf9a185a784",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-037150bf9a185a784",
            "id": "r-rtb-08b3d108fe5a65c881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08b3d108fe5a65c88",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08b3d108fe5a65c88"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400217687748:route-table/rtb-08b3d108fe5a65c88",
            "id": "rtb-08b3d108fe5a65c88",
            "owner_id": "400217687748",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037150bf9a185a784",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shopez-public-rt"
            },
            "tags_all": {
              "Name": "shopez-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08fcf16f9083be918"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "rtb-08b3d108fe5a65c88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0385d1ef99e4c4750",
            "region": "us-east-1",
            "route_table_id": "rtb-08b3d108fe5a65c88",
            "subnet_id": "subnet-00f1cd2d5da909cb4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "rtbassoc-0385d1ef99e4c4750",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be07e176a1b1aed7",
            "region": "us-east-1",
            "route_table_id": "rtb-08b3d108fe5a65c88",
            "subnet_id": "subnet-0ebc82707275f008c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "rtbassoc-0be07e176a1b1aed7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400217687748:subnet/subnet-00f1cd2d5da909cb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f1cd2d5da909cb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400217687748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-0",
              "kubernetes.io/cluster/shopez-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-0",
              "kubernetes.io/cluster/shopez-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08fcf16f9083be918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "subnet-00f1cd2d5da909cb4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400217687748:subnet/subnet-0ebc82707275f008c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebc82707275f008c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "400217687748",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/shopez-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/shopez-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-08fcf16f9083be918"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "subnet-0ebc82707275f008c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:400217687748:vpc/vpc-08fcf16f9083be918",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046cd4806a5ded372",
            "default_route_table_id": "rtb-0668d109562748dc5",
            "default_security_group_id": "sg-03c876742bbdf2899",
            "dhcp_options_id": "dopt-06b922f7a9e75081d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08fcf16f9083be918",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0668d109562748dc5",
            "owner_id": "400217687748",
            "region": "us-east-1",
            "tags": {
              "Name": "shopez-vpc",
              "kubernetes.io/cluster/shopez-eks": "shared"
            },
            "tags_all": {
              "Name": "shopez-vpc",
              "kubernetes.io/cluster/shopez-eks": "shared"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "400217687748",
            "id": "vpc-08fcf16f9083be918",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}